<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".ListDetail">
    <item android:id="@+id/action_rename_list" android:title="@string/rename_list"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_delete_list" android:title="@string/delete_list"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_clear_list" android:title="@string/clear_list"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_clear_checked" android:title="@string/clear_checked"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_check_all" android:title="@string/check_all"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_uncheck_all" android:title="@string/uncheck_all"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_sort_color" android:title="@string/sort_color"
        android:icon="@drawable/sortcolor" android:orderInCategory="100" app:showAsAction="always"/>
    <item android:id="@+id/action_sort_name" android:title="@string/sort_name"
        android:icon="@drawable/sortatoz"  android:orderInCategory="100" app:showAsAction="always"/>
    <item android:id="@+id/action_share_list" android:title="@string/share_list"
        android:orderInCategory="100" app:showAsAction="never"
        app:actionProviderClass="androidx.appcompat.widget.ShareActionProvider" />
</menu>